--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,14 @@
             cryptoZombies = new web3js.eth.Contract(cryptoZombiesABI, cryptoZombiesAddress);
         }
 
+        function zombieToOwner(id) {
+            return cryptoZombies.methods.zombieToOwner(id).call();
+        }
+
+        function getZombiesByOwner(owner) {
+            return cryptoZombies.methods.getZombiesByOwner(owner).call();
+        }
+
         window.addEventListener('load', function () {
 
             // Checking if Web3 has been injected by the browser (Mist/MetaMask)
