--- a/client/index.html
+++ b/client/index.html
@@ -2,22 +2,30 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script language="javascript" type="text/javascript" src="web3.min.js"></script>
     <script language="javascript" type="text/javascript" src="./cryptozombies_abi.js"></script>
+    <script language="javascript" type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
+    <div id="zombies"></div>
+    <div id="txStatus"></div>
+
     <script>
         var cryptoZombies;
         var userAccount;
 
         function startApp() {
             var cryptoZombiesAddress = "YOUR_CONTRACT_ADDRESS";
-            cryptoZombies = new web3js.eth.Contract(cryptoZombiesABI, cryptoZombiesAddress);
+            cryptoZombies = new web3js.eth.Contract(
+                cryptoZombiesABI,
+                cryptoZombiesAddress
+            );
 
             var accountInterval = setInterval(function () {
                 // Check if account has changed
@@ -27,6 +35,16 @@
                     getZombiesByOwner(userAccount).then(displayZombies);
                 }
             }, 100);
+
+            cryptoZombies.events.Transfer({ filter: { _to: userAccount } })
+                .on("data", function (event) {
+                    let data = event.returnValues;
+                    getZombiesByOwner(userAccount).then(displayZombies);
+                }).on("error", console.error);
+        }
+
+        function getZombieDetails(id) {
+            return cryptoZombies.methods.zombies(id).call();
         }
 
         function zombieToOwner(id) {
@@ -37,10 +55,74 @@
             return cryptoZombies.methods.getZombiesByOwner(owner).call();
         }
 
-        window.addEventListener('load', function () {
+        function displayZombies(ids) {
+            $("#zombies").empty();
+            for (id in ids) {
+                getZombieDetails(id).then((zombie) => {
+                    $("#zombies").append(`
+                    <div class="zombie">
+                        <ul>
+                            <li>Name: ${zombie.name}</li>
+                            <li>DNA: ${zombie.dna}</li>
+                            <li>Level: ${zombie.level}</li>
+                            <li>Wins: ${zombie.winCount}</li>
+                            <li>Losses: ${zombie.lossCount}</li>
+                            <li>Ready Time: ${zombie.readyTime}</li>
+                        </ul>
+                    </div>`);
+                });
+            }
+        }
 
+        function createRandomZombie(name) {
+            // This is going to take a while, so update the UI to let the user know
+            // the transaction has been sent
+            $("#txStatus").text("Creating new zombie on the blockchain. This may take a while...");
+            // Send the tx to our contract:
+            return cryptoZombies.methods.createRandomZombie(name)
+                .send({ from: userAccount })
+                .on("receipt", function (receipt) {
+                    $("#txStatus").text("Successfully created " + name + "!");
+                    // Transaction was accepted into the blockchain, let's redraw the UI
+                    getZombiesByOwner(userAccount).then(displayZombies);
+                })
+                .on("error", function (error) {
+                    // Do something to alert the user their transaction has failed
+                    $("#txStatus").text(error);
+                });
+        }
+
+        function feedOnKitty(zombieId, kittyId) {
+            $("#txStatus").text("Eating a kitty. This may take a while...");
+
+            return cryptoZombies.methods.feedOnKitty(zombieId, kittyId)
+                .send({ from: userAccount })
+                .on("receipt", function (receipt) {
+                    $("#txStatus").text("Ate a kitty and spawned a new Zombie!");
+
+                    getZombiesByOwner(userAccount).then(displayZombies);
+                })
+                .on("error", function (error) {
+
+                    $("#txStatus").text(error);
+                });
+        }
+
+        function levelUp(zombieId) {
+            $("#txStatus").text("Leveling up your zombie...");
+            return cryptoZombies.methods.levelUp(zombieId)
+                .send({ from: userAccount, value: web3js.utils.toWei("0.001", "ether") })
+                .on("receipt", function (receipt) {
+                    $("#txStatus").text("Power overwhelming! Zombie successfully leveled up");
+                })
+                .on("error", function (error) {
+                    $("#txStatus").text(error);
+                });
+        }
+
+        window.addEventListener("load", function () {
             // Checking if Web3 has been injected by the browser (Mist/MetaMask)
-            if (typeof web3 !== 'undefined') {
+            if (typeof web3 !== "undefined") {
                 // Use Mist/MetaMask's provider
                 web3js = new Web3(web3.currentProvider);
             } else {
@@ -50,9 +132,8 @@
             }
 
             // Now you can start your app & access web3js freely:
-            startApp()
-
-        })
+            startApp();
+        });
     </script>
 </body>
 
